--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "start": "nodemon",
     "test": "jest",
     "lint:eslint": "eslint --ignore-path .gitignore --ext .ts",
-    "lint:ts": "yarn run lint:eslint src/",
-    "lint": "yarn run lint:ts ",
-    "lint:fix": "yarn run lint:ts --fix"
+    "lint:ts": "npm run lint:eslint src/",
+    "lint": "npm run lint:ts ",
+    "lint:fix": "npm run lint:ts --fix"
   },
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "redis": "^3.1.2",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -36,6 +37,6 @@
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "tslint": "^5.20.1",
-    "typescript": "^4.0.3"
+    "typescript": "^4.2.4"
   }
 }
