--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,8 @@ services:
     command: redis-server --appendonly yes
     volumes:
       - redis_data:/data
+    ports: 
+      - 6379:6379
 
 volumes:
   redis_data:
