--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
       "./node_modules/@types",
       "./src/types"
     ],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
     "module": "commonjs",
