--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - redis_data:/data
     ports: 
       - 6379:6379
+    stdin_open: true
+    tty: true
 
 volumes:
   redis_data:
