--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jest": "^26.4.2",
     "nodemon": "^2.0.4",
     "prettier": "^2.1.2",
+    "redis-mock": "^0.56.3",
     "ts-jest": "^26.4.0",
     "ts-node": "^9.0.0",
     "tslint": "^5.20.1",
