--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "node-cron": "^3.0.0",
     "redis": "^3.1.2",
     "winston": "^3.3.3"
   },
