--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
     
     - run: npm install
-    - run: eslint --ignore-path .gitignore --ext .ts
+    - run: npm run eslint --ignore-path .gitignore --ext .ts
       
   build:
     needs: [lint]
