--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         
     - run: npm ci
-    - run: npm run build — if-present
+    - run: npm run build
     
   test:
     needs: [build]
