--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,6 +59,11 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+
+    - name: Create .env file
+      uses: SpicyPizza/create-envfile@v1
+      with:
+        envkey_LOG_LEVEL: "error"
         
     - run: npm install
     - run: npm test
