--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ node_modules/
 build
 
 yarn-error.log
+
+*.tfvars
+*.tfstate
+*.tfstate.*
+**/.terraform/*
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
