--- a/.github/workflows/gke.yml
+++ b/.github/workflows/gke.yml
@@ -2,8 +2,8 @@ name: Build and Deploy to GKE
 
 on:
   push:
-    branches:
-    - master
+    tags:
+      - "deploy"
 
 env:
   PROJECT_ID: ${{ secrets.GKE_PROJECT }}
